--- a/Anastasiya/index.html
+++ b/Anastasiya/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-    <script src="script.js"></script>
+    <script src="script_a_frame.js"></script>
   </head>
 
   <body onload="story()">
@@ -31,14 +31,13 @@
       <!-- THE WASHING MASHINE -->
       <a-sphere
         radius="5"
-        material="color: red"
         width="0.2"
         height="0.2"
         depth="0.2"
         position="-42 -9 -11.5"
         rotation="0 0 0"
         scale="0.2"
-        src=""
+        src="/assets/washing machine texture1.jpg"
         washing_machine
       ></a-sphere>
       <!-- THE BIN -->
@@ -55,9 +54,9 @@
       ></a-box>
       <a-assets>
         <!-- <audio id="river" src="assets/Bg-music.wav" autoplay="true" loop="true"></audio> -->
-        <!-- <img id="entrance" src="https://i.imgur.com/wjobVTN.jpg" />
-        <img id="study" src="https://i.imgur.com/I7PAB.jpg" />
-        <img id="parking" src="https://i.imgur.com/HNluPrg.jpg" /> -->
+        <img id="washingClothes" src="/assets/washing machine texture1.jpg" />
+        <!-- <img id="study" src="https://i.imgur.com/I7PAB.jpg" /> -->
+        <!-- <img id="parking" src="https://i.imgur.com/HNluPrg.jpg" />  -->
       </a-assets>
     </a-scene>
   </body>
