--- a/Locke and Key/index.html
+++ b/Locke and Key/index.html
@@ -68,7 +68,7 @@
       <a-entity camera position ="5 1.2 -7.5" 
                                       look-controls="pointerLockEnabled:false" 
                                       ><a-cursor color="white"></a-cursor>
-                                     <a-sound src="url(assets/sounds/backGround.mp3)" autoplay="true"
+                                     <a-sound src="url(https://cdn.glitch.global/dfda010c-fcfb-4e8d-bc2f-b3812d251d24/Fluffing-a-Duck.mp3?v=1654681075790)" autoplay="true"
                  position="0 0 0" loop="true" volume="0.5"></a-sound>
                     </a-entity>
         </a-entity>
