--- a/Anastasiya/PasswordHint.html
+++ b/Anastasiya/PasswordHint.html
@@ -6,11 +6,26 @@
   </head>
 
   <body>
-    <p>You found a peace of paper in the trash can</p>
-    <img src="/assets/washing_machine.jpg" alt="washing machine" />
-    <img src="/assets/light.png" alt="light" />
-    <img src="/assets/table.jpg" alt="table" />
-    <img src="/assets/dryer.jpg" alt="dryer" />
-    <button type="button" onClick="go_back()" id="go_back">Go back</button>
+    <div id="hint-wraper">
+      <h1>You found a peace of paper in the trash can</h1>
+      <div class="hint-img">
+        <img
+          src="assets/washing_machine.jpg"
+          alt="washing machine"
+          class="hintImg"
+        />
+        <img src="assets/light.png" alt="light" class="hintImg" />
+        <img src="assets/table.jpg" alt="table" class="hintImg" />
+        <img src="assets/dryer.jpg" alt="dryer" class="hintImg" />
+      </div>
+      <button
+        type="button"
+        onClick="go_back()"
+        id="go_back"
+        class="hintGoBackBtn"
+      >
+        Go back
+      </button>
+    </div>
   </body>
 </html>
