--- a/Alexander/level1.html
+++ b/Alexander/level1.html
@@ -10,7 +10,7 @@
 
 <body>
     <a-scene id="myScene">
-        <a-entity environment="preset:japan;"></a-entity>  
+        <a-entity environment="preset:tron;"></a-entity>  
 
         <a-text color="white" value="press space to shoot!" position="-.5 1 -4"></a-text>
         <a-plane id="floor" static-body height="1000" width="1000" position="0 -0.02 0" color="black"
