--- a/Alexander/level2.html
+++ b/Alexander/level2.html
@@ -16,8 +16,9 @@
         <a-camera id="myCamera" position="0 1 0">
             <a-cursor intersection-spawn="event: click; mixin: voxel"></a-cursor>
         </a-camera>
-        <a-icosahedron static-body class="target" color="white" radius="1" position="-2 3 -5"></a-icosahedron>
-        <a-icosahedron static-body class="target" color="white" radius="1" position="2 3 -5"></a-icosahedron>
+        
+        <a-cone static-body class="target" color="white" radius="1" position="-2 3 -5"></a-cone>
+        <a-conestatic-body class="target" color="white" radius="1" position="2 3 -5"></a-conestatic-body>
         <a-icosahedron static-body class="target" color="white" radius="1" position="-2 3 -10"></a-icosahedron>
         <a-icosahedron static-body class="target" color="white" radius="1" position="2 3 -10"></a-icosahedron>
     </a-scene>
